# gnu_sins

./: COPYING  CREDITS  ChangeLog  HISTORY  INSTALL  MODULES  Makefile  NEWS  PORTABILITY  README  RUN  TODO  UI  make_dist.sh
doc/: README-0.2  README.ui_vga  mod_ai.NOTES  mod_human.NOTES
examples/: dot_sinsrc  walls1.sns
share/pictset/: ant_16x16  ant_8x8  death_16x16  di_8x8  flags_16x16  fruits_16x16  fruits_8x8  nic_16x16  nic_32x32  simple_8x8  spheres2_8x8  spheres_16x16  spheres_8x8
src/: .cvsignore  .modules  Makefile  Makefile.in  VARS.c  acconfig.h  arena.c  cmdline.c  command.c  common.c  compat.c  config.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  delay.c  fruit.c  main.c  messages.c  mod_TEMPLATE.c  mod_ai.c  mod_human.c  mod_human.h  mod_long.c  mod_wall.c  modules.c  out  parse_input.c  sins  sins.h  snake.c  snake_compat.h  snake_limits.h  snake_move.c  ui_TEMPLATE.c  ui_X.c  ui_ansi.c  (+6 more)
utils/: loop_pictsets  makepictset
